Prevent icons from jumping

--- a/public/rich-text-editor.css
+++ b/public/rich-text-editor.css
@@ -261,7 +261,7 @@
 }
 
 .rich-text-editor-toolbar-characters-group {
-  margin-right: 35px;
+  margin-right: 12px;
   display: inline-block;
   vertical-align: top;
 }
